// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CookieContent /> should render correctly with 1 cookie type and no script 1`] = `
<div>
  <div>
    <FormattedHTMLMessage
      id="cookies-page-texte-part1"
      tagName="span"
      values={
        Object {
          "platformLink": "http://localhost",
        }
      }
    />
  </div>
  <FormattedHTMLMessage
    id="cookies-page-texte-part1-2-noScript"
    tagName="span"
    values={
      Object {
        "platformLink": "http://localhost",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-tmp-part1-3"
    tagName="span"
    values={
      Object {
        "nbCookies": 1,
        "platformLink": "http://localhost",
      }
    }
  />
  <div
    className="content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>cookieContent</p>",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-part2"
    tagName="span"
    values={
      Object {
        "platformLink": "http://localhost",
      }
    }
  />
</div>
`;

exports[`<CookieContent /> should render correctly with 3 cookies type 1`] = `
<div>
  <div>
    <FormattedHTMLMessage
      id="cookies-page-texte-tmp-part1"
      tagName="span"
      values={
        Object {
          "cookieType": 3,
          "platformLink": "http://localhost",
        }
      }
    />
  </div>
  <FormattedHTMLMessage
    id="cookies-page-texte-part1-2"
    tagName="span"
    values={
      Object {
        "platformLink": "http://localhost",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-tmp-part1-3"
    tagName="span"
    values={
      Object {
        "nbCookies": 3,
        "platformLink": "http://localhost",
      }
    }
  />
  <div
    className="content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>cookieContent</p>",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-part2"
    tagName="span"
    values={
      Object {
        "platformLink": "http://localhost",
      }
    }
  />
</div>
`;

exports[`<CookieContent /> should render correctly with ads cookie type 1`] = `
<div>
  <div>
    <FormattedHTMLMessage
      id="cookies-page-texte-tmp-part1"
      tagName="span"
      values={
        Object {
          "cookieType": 2,
          "platformLink": "http://localhost",
        }
      }
    />
  </div>
  <FormattedHTMLMessage
    id="cookies-page-texte-part1-2"
    tagName="span"
    values={
      Object {
        "platformLink": "http://localhost",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-tmp-part1-3"
    tagName="span"
    values={
      Object {
        "nbCookies": 2,
        "platformLink": "http://localhost",
      }
    }
  />
  <div
    className="content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>cookieContent</p>",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-part2"
    tagName="span"
    values={
      Object {
        "platformLink": "http://localhost",
      }
    }
  />
</div>
`;

exports[`<CookieContent /> should render correctly with statistic cookie type 1`] = `
<div>
  <div>
    <FormattedHTMLMessage
      id="cookies-page-texte-part1"
      tagName="span"
      values={
        Object {
          "platformLink": "http://localhost",
        }
      }
    />
  </div>
  <FormattedHTMLMessage
    id="cookies-page-texte-part1-2"
    tagName="span"
    values={
      Object {
        "platformLink": "http://localhost",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-tmp-part1-3"
    tagName="span"
    values={
      Object {
        "nbCookies": 2,
        "platformLink": "http://localhost",
      }
    }
  />
  <div
    className="content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>cookieContent</p>",
      }
    }
  />
  <FormattedHTMLMessage
    id="cookies-page-texte-part2"
    tagName="span"
    values={
      Object {
        "platformLink": "http://localhost",
      }
    }
  />
</div>
`;
